--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 195.154.200.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-497.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-217.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇩🇪 德国-758.3KB/s(Youtube:不良林), server: 193.108.117.24, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-1.17MB/s(Youtube:不良林), server: 193.108.118.34, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇩🇪 德国-1.63MB/s(Youtube:不良林), server: 193.108.118.34, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-353.7KB/s(Youtube:不良林), server: 85.208.108.18, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.71MB/s(Youtube:不良林), server: 85.208.108.18, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 波兰-1016.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇯🇵 日本-411.6KB/s(Youtube:不良林), server: 85.208.108.18, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-841.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-296.4KB/s(Youtube:不良林), server: 120.233.29.189, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇩🇪 德国-872.5KB/s(Youtube:不良林), server: 193.108.118.34, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-266.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-278.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-233.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-383.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-237.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-758.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-758.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-758.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-758.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-758.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-758.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇩🇪 德国-758.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
