--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-411.6KB/s(Youtube:不良林), server: 85.208.108.18, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-841.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-296.4KB/s(Youtube:不良林), server: 120.233.29.189, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇩🇪 德国-872.5KB/s(Youtube:不良林), server: 193.108.118.34, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-266.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-278.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-233.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-383.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-237.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 波兰-1016.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-894.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-405.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-984.9KB/s(Youtube:不良林), server: 38.86.135.36, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-279.5KB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.75.136.21, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
+      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-984.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-279.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
+      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-984.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-279.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
+      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-984.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-279.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
+      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-984.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-279.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
+      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-984.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-279.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
+      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-984.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-279.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-411.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-841.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-872.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-278.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.7KB/s(Youtube:不良林)
+      - 波兰-1016.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-631.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-894.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-984.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-279.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
