--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇭🇰 香港-911.2KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.75.136.21, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-1.83MB/s(Youtube:不良林), server: 217.30.10.65, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇺🇸 美国-501.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-784.4KB/s(Youtube:不良林), server: 38.64.138.145, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-777.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-872.8KB/s(Youtube:不良林), server: 38.114.114.19, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-948.9KB/s(Youtube:不良林), server: 38.75.136.21, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.114.114.67, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-784.4KB/s(Youtube:不良林), server: 38.64.138.145, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-680.4KB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-268.3KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇫🇷 法国-868.1KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-291.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-268.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-220.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-742.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-872.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-268.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-872.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-268.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-872.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-268.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-872.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-268.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-872.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-268.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-872.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-268.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-911.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-777.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-872.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-268.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-868.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
